--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,5 @@
 .header__logo {
-    position: absolute;
-    left: 0;
+    position: relative;
     background: 190px 44px;
     border: 0;
     justify-self: left;
