--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -10,6 +10,7 @@
     text-align: center;
     margin: 0 auto 0;
     padding-top: 32px;
+    text-decoration: none;
 }
 
 @media (max-width: 425px) {
