--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,6 +2,7 @@
 @import url('./__overlay/cover__overlay.css');
 @import url('./__subtitle/cover__subtitle.css');
 @import url('./__title/cover__title.css');
+@import url('./__link/cover__link.css');
 
 .cover {
     margin: 0 auto 0;
@@ -13,12 +14,13 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    text-decoration: none;
 }
 
 @media (max-width: 1024px) {
     .cover {
         width: 100%;
-        height: calc(100vw/1.6);
+        height: calc(100vw / 1.6);
     }
 }
 
@@ -26,7 +28,7 @@
     .cover {
         margin-top: 0;
         width: 100%;
-        height: calc(100vw/1.6);
+        height: calc(100vw / 1.6);
     }
 }
 
@@ -34,7 +36,7 @@
     .cover {
         margin: 0;
         width: 100%;
-        height: calc(100vw/1.6);
+        height: calc(100vw / 1.6);
     }
 }
 
