--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,13 +1,17 @@
+@import url('./_current/header__lang-link_current.css');
+
 .header__lang-link {
-    margin: 0 0 0 18px;
+    margin: 0 0 0 9px;
     color: white;
     font-size: 24px;
     line-height: 28px;
     justify-self: right;
+    list-style: none;
+    text-decoration: none;
 }
 
-.header__lang-link:nth-of-type(2) {
-    text-decoration: none;
+.header__lang-link_current {
+    text-decoration: underline white;
 }
 
 @media (max-width: 425px) {
@@ -17,3 +21,4 @@
         justify-self: right;
     }
 }
+
