--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 @import url('./__lang-link/header__lang-link.css');
+@import url('./__lang-box/header__lang-box.css');
 @import url('./__logo/header__logo.css');
 
 .header {
@@ -9,7 +10,7 @@
     height: 44px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
 
