--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,36 +1,28 @@
 .lead__image {
     display: block;
-    margin: 0 auto 0;
-    padding-top: 64px;
+    margin: 64px auto 0;
     width: 984px;
-}
-
-
-@media (max-width: 1280px) {
-    .lead__image {
-        padding-top: 64px;
-    }
 }
 
 
 @media (max-width: 1024px) {
     .lead__image {
-        padding-top: 56px;
-        width: 90%;
+        margin: 56px 0 0;
+        width: 100%;
     }
 }
 
 
 @media (max-width: 768px) {
     .lead__image {
-        padding-top: 56px;
+        margin: 56px 0 0;
         width: 100%;
     }
 }
 
 @media (max-width: 425px) {
     .lead__image {
-        padding-top: 40px;
+        margin-top: 40px;
         width: 100%;
     }
 }
