--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,7 +14,14 @@
 @media (max-width: 1024px) {
     .lead__title {
         width: 100%;
-        font-size: 12vw;
+        font-size: 96px;
+    }
+}
+
+@media (max-width: 768px) {
+    .lead__title {
+        width: 100%;
+        font-size: 96px;
     }
 }
 
