--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,8 @@
 .page {
     width: 1280px;
-    margin: 0;
+    margin: 0 auto 0; /* aligned to center and sizes don't grow above 1280px vw */
     padding: 0;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
@@ -11,6 +11,13 @@
     position: relative;
     background-color: #2A2C2F;
   }
+
+@media (max-width: 1280px) {
+  .page {
+    width: 100%;
+    max-width: 1280px; /* limited vw like this - does it make sense? */
+  }
+}
 
 @media (max-width: 1024px) {
   .page {
