--- a/blocks/place/__paragraph-element/place__paragraph-element.css
+++ b/blocks/place/__paragraph-element/place__paragraph-element.css
@@ -1,4 +1,4 @@
-.place__paragraph_text-m {
+.place__paragraph-element {
     margin: 0;
     padding: 0 0 24px 0;
     font-size: 18px;
@@ -6,24 +6,15 @@
     width: 100%;
 }
 
-.place__paragraph_text-s {
-    margin: 0;
-    padding: 0 0 24px 0;
-    font-size: 16px;
-    line-height: 26px;
-    width: 100%;
-}
-
-
 @media (max-width: 768px) {
-    .place__paragraph_text-m {
+    .place__paragraph-element {
         font-size: 16px;
         line-height: 26px;
     }
 }
 
 @media (max-width: 425px) {
-    .place__paragraph_text-m {
+    .place__paragraph-element {
         font-size: 16px;
         line-height: 26px;
     }
