--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,7 +6,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
-    line-height: 1.1;
+    line-height: 1.05;
     color: white;
     text-decoration: none;
     align-self: end;
@@ -14,7 +14,7 @@
 
 @media (max-width: 1024px) {
     .place__title {
-        font-size: 7.5vw;
+        font-size: 72px;
         line-height: 1.1;
     }
 }
