--- a/blocks/footer/__link-box/footer__link-box.css
+++ b/blocks/footer/__link-box/footer__link-box.css
@@ -8,3 +8,10 @@
     align-items: center;
     color: white;
 }
+
+@media (max-width: 425px) {
+    .footer__link-box {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
