--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 @import url('./__copyright/footer__copyright.css');
 @import url('./__link/footer__link.css');
 @import url('./__link-box/footer__link-box.css');
+@import url('./__link-element/footer__link-element.css');
 
 .footer {
     margin: 92px auto 24px;
